--- a/static/index.html
+++ b/static/index.html
@@ -24,50 +24,60 @@
       </header>
 
       <!-- Glass card for connection -->
-      <div class="glass-card card-connect">
-        <div class="card-header">
-          <h2>Connection</h2>
-          <span class="status-badge" id="statusBadge">Disconnected</span>
-        </div>
-        <div class="input-group">
-          <label for="room">Room ID</label>
-          <div class="input-with-button">
-            <input id="room" type="text" value="" placeholder="Enter room name" />
-            <button id="generateBtn" class="btn btn-icon btn-generate" title="Generate random room ID">
-              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <polyline points="23 4 23 10 17 10"></polyline>
-                <polyline points="1 20 1 14 7 14"></polyline>
-                <path d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"></path>
-              </svg>
-            </button>
-          </div>
-        </div>
-        <div class="button-group">
-          <button id="connectBtn" class="btn btn-primary">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <path d="M5 12h14"></path>
-              <path d="m12 5 7 7-7 7"></path>
-            </svg>
-            Connect
-          </button>
-          <button id="disconnectBtn" class="btn btn-secondary">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <line x1="18" y1="6" x2="6" y2="18"></line>
-              <line x1="6" y1="6" x2="18" y2="18"></line>
-            </svg>
-            Disconnect
-          </button>
-        </div>
+   <!-- Glass card for connection -->
+<div class="glass-card card-connect">
+  <div class="card-header">
+    <h2>Connection</h2>
+    <span class="status-badge" id="statusBadge">Disconnected</span>
+  </div>
+  
+  <!-- Name input -->
+  <div class="input-group">
+    <label for="username">Your Name</label>
+    <input id="username" type="text" value="Web User" placeholder="Enter your name" />
+  </div>
+  
+  <div class="input-group">
+    <label for="room">Room ID</label>
+    <div class="input-with-button">
+      <input id="room" type="text" value="" placeholder="Enter room name" />
+      <button id="generateBtn" class="btn btn-icon btn-generate" title="Generate random room ID">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <polyline points="23 4 23 10 17 10"></polyline>
+          <polyline points="1 20 1 14 7 14"></polyline>
+          <path d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"></path>
+        </svg>
+      </button>
+    </div>
+  </div>
+  
+  <div class="button-group">
+    <button id="connectBtn" class="btn btn-primary">
+      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <path d="M5 12h14"></path>
+        <path d="m12 5 7 7-7 7"></path>
+      </svg>
+      Connect
+    </button>
+    <button id="disconnectBtn" class="btn btn-secondary">
+      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <line x1="18" y1="6" x2="6" y2="18"></line>
+        <line x1="6" y1="6" x2="18" y2="18"></line>
+      </svg>
+      Disconnect
+    </button>
+  </div>
 
-        <!-- QR Code section (shown when connected) -->
-        <div id="qrSection" class="qr-section" style="display: none;">
-          <div class="qr-header">
-            <span>📱 Scan to Join Room</span>
-            <button id="toggleQr" class="btn-link">Show QR</button>
-          </div>
-          <div id="qrContainer" class="qr-container" style="display: none;"></div>
-        </div>
-      </div>
+  <!-- QR Code section (shown when connected) -->
+  <div id="qrSection" class="qr-section" style="display: none;">
+    <div class="qr-header">
+      <span>📱 Scan to Join Room</span>
+      <button id="toggleQr" class="btn-link">Show QR</button>
+    </div>
+    <div id="qrContainer" class="qr-container" style="display: none;"></div>
+  </div>
+</div>
+
 
       <!-- Glass card for messages -->
       <div class="glass-card card-message">
